added openAPI endpoint
