# openapi.yaml
@@ -9,6 +9,7 @@ info:
     url: 'https://creativecommons.org/publicdomain/zero/1.0/'
 tags:
   - name: cars
+  - name: api specification
 paths:
   /cars:
     description: All cars in database
@@ -22,6 +23,7 @@ paths:
           description: Limit the amount of cars that will be fetched
           schema:
             type: integer
+          required: true
       responses:
         '200':
           description: Success
@@ -80,7 +82,7 @@ paths:
                           type:
                             type: string
         '400':
-          description: Error
+          description: Client error
           content:
             application/json:
               schema:
@@ -93,7 +95,7 @@ paths:
                   status:
                     type: string
         '500':
-          description: Error
+          description: Server error
           content:
             application/json:
               schema:
@@ -496,7 +498,7 @@ paths:
                           type:
                             type: string
         '400':
-          description: Error
+          description: Client rror
           content:
             application/json:
               schema:
@@ -509,7 +511,7 @@ paths:
                   status:
                     type: string
         '500':
-          description: Error
+          description: Server error
           content:
             application/json:
               schema:
@@ -593,7 +595,7 @@ paths:
                           type:
                             type: string
         '400':
-          description: Error
+          description: Client error
           content:
             application/json:
               schema:
@@ -606,7 +608,7 @@ paths:
                   status:
                     type: string
         '500':
-          description: Error
+          description: Server error
           content:
             application/json:
               schema:
@@ -690,7 +692,7 @@ paths:
                           type:
                             type: string
         '400':
-          description: Error
+          description: Client error
           content:
             application/json:
               schema:
@@ -703,7 +705,7 @@ paths:
                   status:
                     type: string
         '500':
-          description: Error
+          description: Server error
           content:
             application/json:
               schema:
@@ -787,7 +789,7 @@ paths:
                           type:
                             type: string
         '400':
-          description: Error
+          description: Client error
           content:
             application/json:
               schema:
@@ -800,7 +802,7 @@ paths:
                   status:
                     type: string
         '500':
-          description: Error
+          description: Server error
           content:
             application/json:
               schema:
@@ -812,3 +814,43 @@ paths:
                     type: object
                   status:
                     type: string
+  /openAPI:
+    get:
+      tags:
+        - api specification
+      description: Returns this openAPI specification in json format
+      responses:
+        '200':
+          description: openAPI
+          content:
+            application/json:
+              schema:
+                type: object
+        '400':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  response: 
+                    type: object
+                  status:
+                    type: string
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  response: 
+                    type: object
+                  status:
+                    type: string
+  
+
